chore: style-dictionary output

--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -7,6 +7,8 @@
   --figma-global-global-3plus-blue-400: #3d7af5;
   --figma-global-global-3plus-blue-300: #76a4ff;
   --figma-global-global-3plus-red: #f00;
+  --figma-global-global-green-500: #59ff4d;
+  --figma-global-global-pink-500: #ff00fa;
   --figma-global-alias-cta-background-3plus-blue: #000;
   --figma-global-size-sm: 8px;
   --figma-global-size-md: 8px*2;
