chore: style-dictionary output

--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -8,6 +8,7 @@
   --figma-global-global-3plus-blue-300: #76a4ff;
   --figma-global-global-3plus-red: #f00;
   --figma-global-global-green-500: #59ff4d;
+  --figma-global-global-yellow-500: #fefe47;
   --figma-global-alias-cta-background-3plus-blue: #000;
   --figma-global-size-sm: 8px;
   --figma-global-size-md: 8px*2;
