--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -10,6 +10,7 @@
   --figma-global-global-green-tea: #31690a;
   --figma-global-global-yellow-30: #fefe47;
   --figma-global-global-pink-31: #ff00e8;
+  --figma-global-global-gray: #8b8b8b;
   --figma-global-alias-cta-background-3plus-blue: #000;
   --figma-global-size-sm: 8px;
   --figma-global-size-md: 8px*2;
