--- a/style/src/style.css
+++ b/style/src/style.css
@@ -12,28 +12,28 @@
   */
 
 .blue-500 {
-  background-color: var(--figma-global-3plus-blue-500);
+  background-color: var(--3plus-global-3plus-blue-500);
   color: #fff;
 }
 
 .blue-400 {
-  background-color: var(--figma-global-3plus-blue-400);
+  background-color: var(--3plus-global-3plus-blue-400);
   color: #fff;
 }
 
 .blue-300 {
-  background-color: var(--figma-global-3plus-blue-300);
+  background-color: var(--3plus-global-3plus-blue-300);
   color: #fff;
 }
 
 .font-sm {
-  font-size: var(--figma-size-sm);
+  font-size: var(--3plus-size-sm);
 }
 .font-md {
-  font-size: var(--figma-size-md);
+  font-size: var(--3plus-size-md);
 }
 .font-lg {
-  font-size: var(--figma-size-lg);
+  font-size: var(--3plus-size-lg);
 }
 
 .box {
