--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -3,15 +3,15 @@
  */
 
 :root {
-  --figma-global-global-3plus-blue-500: #0d59f2;
-  --figma-global-global-3plus-blue-400: #3d7af5;
-  --figma-global-global-3plus-blue-300: #76a4ff;
-  --figma-global-global-3plus-red: #f00;
-  --figma-global-global-green-tea: #31690a;
-  --figma-global-global-yellow-30: #fefe47;
-  --figma-global-global-pink-31: #ff00e8;
-  --figma-global-global-gray: #8b8b8b;
-  --figma-global-global-purple: #66008f;
+  --figma-global-3plus-blue-500: #0d59f2;
+  --figma-global-3plus-blue-400: #3d7af5;
+  --figma-global-3plus-blue-300: #76a4ff;
+  --figma-global-3plus-red: #f00;
+  --figma-global-green-tea: #31690a;
+  --figma-global-yellow-30: #fefe47;
+  --figma-global-pink-31: #ff00e8;
+  --figma-global-gray: #8b8b8b;
+  --figma-global-purple: #66008f;
   --figma-global-alias-cta-background-3plus-blue: #000;
   --figma-global-size-sm: 8px;
   --figma-global-size-md: 8px*2;
