chore: style-dictionary output

--- a/tokens/scss/_variables.scss
+++ b/tokens/scss/_variables.scss
@@ -1,20 +1,20 @@
 
 // Do not edit directly
-// Generated on Tue, 21 Jun 2022 07:59:22 GMT
+// Generated on Thu, 23 Jun 2022 08:51:49 GMT
 
-$ch3plus-global-3plus-blue-500: #0d59f2;
-$ch3plus-global-3plus-blue-400: #3d7af5;
-$ch3plus-global-3plus-blue-300: #76a4ff;
-$ch3plus-global-3plus-red: #f00;
-$ch3plus-global-green-tea: #31690a;
-$ch3plus-global-yellow-30: #fefe47;
-$ch3plus-global-pink-31: #ff00e8;
-$ch3plus-global-gray: #8b8b8b;
-$ch3plus-global-purple: #66008f;
-$ch3plus-global-alias-cta-background-3plus-blue: #000;
-$ch3plus-global-size-sm: 8px;
-$ch3plus-global-size-md: 8px*2;
-$ch3plus-global-size-lg: 8px*4;
-$ch3plus-global-round-sm: 4;
-$ch3plus-global-round-md: 4*2;
-$ch3plus-global-round-lg: 4*4;
+$ch3plus-3plus-blue-500: #0d59f2;
+$ch3plus-3plus-blue-400: #3d7af5;
+$ch3plus-3plus-blue-300: #76a4ff;
+$ch3plus-3plus-red: #f00;
+$ch3plus-green-tea: #31690a;
+$ch3plus-yellow-30: #fefe47;
+$ch3plus-pink-31: #ff00e8;
+$ch3plus-gray: #8b8b8b;
+$ch3plus-purple: #66008f;
+$ch3plus-cta-background: #000;
+$ch3plus-size-sm: 8px;
+$ch3plus-size-md: 16px;
+$ch3plus-size-lg: 32px;
+$ch3plus-round-sm: 4;
+$ch3plus-round-md: 8px;
+$ch3plus-round-lg: 16px;
