chore: style-dictionary output

--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -1,5 +1,5 @@
 /**
- * Do not edit directly, this file was auto-generatedd
+ * Do not edit directly, this file was auto-generated
  */
 
 :root {
@@ -9,7 +9,7 @@
   --ch3plus-3plus-red: #f00;
   --ch3plus-green-tea: #31690a;
   --ch3plus-yellow-30: #fefe47;
-  --ch3plus-pink-31: #ff00e8;
+  --ch3plus-pink-30: #ff00e8;
   --ch3plus-gray: #8b8b8b;
   --ch3plus-purple: #66008f;
   --ch3plus-cta-background: #000;
