chore: style-dictionary output

--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -16,7 +16,7 @@
   --ch3plus-size-sm: 8px;
   --ch3plus-size-md: 16px;
   --ch3plus-size-lg: 32px;
-  --ch3plus-round-sm: 4;
+  --ch3plus-round-sm: 4px;
   --ch3plus-round-md: 8px;
   --ch3plus-round-lg: 16px;
 }
