--- a/tokens/scss/_variables.scss
+++ b/tokens/scss/_variables.scss
@@ -1,20 +1,20 @@
 
 // Do not edit directly
-// Generated on Thu, 23 Jun 2022 08:51:49 GMT
+// Generated on Fri, 24 Jun 2022 04:22:34 GMT
 
-$ch3plus-3plus-blue-500: #0d59f2;
-$ch3plus-3plus-blue-400: #3d7af5;
-$ch3plus-3plus-blue-300: #76a4ff;
-$ch3plus-3plus-red: #f00;
-$ch3plus-green-tea: #31690a;
-$ch3plus-yellow-30: #fefe47;
-$ch3plus-pink-31: #ff00e8;
-$ch3plus-gray: #8b8b8b;
-$ch3plus-purple: #66008f;
-$ch3plus-cta-background: #000;
-$ch3plus-size-sm: 8px;
-$ch3plus-size-md: 16px;
-$ch3plus-size-lg: 32px;
-$ch3plus-round-sm: 4;
-$ch3plus-round-md: 8px;
-$ch3plus-round-lg: 16px;
+$color-blue-500: #0d59f2;
+$color-blue-400: #3d7af5;
+$color-blue-300: #76a4ff;
+$color-red: #ff0000;
+$color-tea: #31690a;
+$color-yellow-30: #fefe47;
+$color-pink-31: #ff00e8;
+$color-gray: #8b8b8b;
+$color-purple: #66008f;
+$color-cta-background: #000000;
+$size-sm: 8px;
+$size-md: 16px;
+$size-lg: 32px;
+$round-sm: 4px;
+$round-md: 8px;
+$round-lg: 16px;
