--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -1,5 +1,6 @@
 /**
- * Do not edit directly, this file was auto-generated
+ * Do not edit directly
+ * Generated on Mon, 27 Jun 2022 04:02:09 GMT
  */
 
 :root {
