chore: style-dictionary output

--- a/tokens/_variables.scss
+++ b/tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Mon, 27 Jun 2022 07:24:13 GMT
+// Generated on Mon, 27 Jun 2022 07:33:05 GMT
 
 $color-blue-500: #0d59f2;
 $color-blue-400: #3d7af5;
@@ -12,9 +12,13 @@ $color-pink-31: #ff00e8;
 $color-gray: #8b8b8b;
 $color-purple: #66008f;
 $color-cta-background: #000000;
-$size-sm: 8px;
-$size-md: 16px;
-$size-lg: 32px;
+$size-box-sm: 8rem;
+$size-box-md: 16rem;
+$size-box-lg: 32rem;
+$size-font-body: 32rem;
+$size-border-rad-sm: 4rem;
+$size-border-rad-md: 8rem;
+$size-border-rad-lg: 16rem;
 $round-sm: 4px;
 $round-md: 8px;
 $round-lg: 16px;
