chore: style-dictionary output

--- a/tokens/_variables.scss
+++ b/tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Mon, 27 Jun 2022 09:13:18 GMT
+// Generated on Mon, 27 Jun 2022 09:27:04 GMT
 
 $color-blue-500: #0d59f2;
 $color-blue-400: #3d7af5;
@@ -12,17 +12,10 @@ $color-pink-31: #ff00e8;
 $color-gray: #8b8b8b;
 $color-purple: #66008f;
 $color-cta-background: #000000;
-$size-box-sm: 8rem;
-$size-box-md: 16rem;
-$size-box-lg: 32rem;
-$size-font-body: 32rem;
-$size-border-rad-sm: 4rem;
-$size-border-rad-md: 8rem;
-$size-border-rad-lg: 16rem;
 $round-sm: 4px;
 $round-md: 8px;
 $round-lg: 16px;
 $font-fam-main-font: DB Heavent;
 $font-weight-medium: Med;
-$font-weight-bold: bold;
+$font-weight-bold: Bold;
 $line-heigh-lh-100: 100%;
