chore: style-dictionary output

--- a/tokens/_variables.scss
+++ b/tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Tue, 28 Jun 2022 03:55:03 GMT
+// Generated on Tue, 28 Jun 2022 03:58:53 GMT
 
 $color-blue-500: #0d59f2;
 $color-blue-400: #3d7af5;
@@ -25,3 +25,6 @@ $fontsize-8: 8px;
 $fontsize-16: 16px;
 $fontsize-32: 32px;
 $ls-02: 0.2px;
+$size-font-desktop: 32rem;
+$size-font-tablet: 16rem;
+$size-font-mobile: 12rem;
