--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Tue, 28 Jun 2022 03:55:04 GMT
+ * Generated on Tue, 28 Jun 2022 03:58:53 GMT
  */
 
 :root {
@@ -27,4 +27,7 @@
   --fontsize-16: 16px;
   --fontsize-32: 32px;
   --ls-02: 0.2px;
+  --size-font-desktop: 32rem;
+  --size-font-tablet: 16rem;
+  --size-font-mobile: 12rem;
 }
