chore: style-dictionary output

--- a/tokens/_variables.scss
+++ b/tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Tue, 28 Jun 2022 03:58:53 GMT
+// Generated on Tue, 28 Jun 2022 04:01:54 GMT
 
 $color-blue-500: #0d59f2;
 $color-blue-400: #3d7af5;
@@ -19,12 +19,7 @@ $font-fam-main-font: DB Heavent;
 $font-weight-medium: Med;
 $font-weight-bold: Bold;
 $line-heigh-lh-120: 120%;
-$body-desktop: [object Object];
-$body-tablet: [object Object];
-$fontsize-8: 8px;
-$fontsize-16: 16px;
-$fontsize-32: 32px;
 $ls-02: 0.2px;
-$size-font-desktop: 32rem;
-$size-font-tablet: 16rem;
-$size-font-mobile: 12rem;
+$fontsize-desktop: 32px;
+$fontsize-tablet: 16px;
+$fontsize-mobile: 12px;
